# atlas-examples

./: Dockerfile  README.md  cabal.project
.devcontainer/: docker-compose.yml
nft/: minter.vkey  nft.cabal
nft/app/: mint.hs
nft/offchain/NFT/: Api.hs  Script.hs
nft/onchain/NFT/OnChain/: NFT.hs
nft/onchain/NFT/OnChain/NFT/: Compiled.hs
oracle/: minter.addr  oracle.cabal  swagger-api.json
oracle/app/: oracle-delete.hs  oracle-update.hs  oracle.hs
oracle/offchain/Oracle/: Api.hs  Script.hs
oracle/onchain/Oracle/OnChain/: Oracle.hs
oracle/onchain/Oracle/OnChain/Oracle/: Compiled.hs
oracle/server/: server-main.hs
oracle/server-lib/Oracle/Api/: Api.hs  Context.hs  Oracle.hs
test-postgres/: CHANGELOG.md  README.md  package.yaml  test-postgres.cabal
test-postgres/app/: Main.hs
test-postgres/docker/: docker-compose.yml
