cabal-version:      3.6
name:               oracle
version:            0.1.0

common common
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:        -Wall -Wincomplete-uni-patterns -Wunused-packages

  -- speed-ups GHCi considerably
  ghc-options:        -fno-show-valid-hole-fits

common plutus-ghc-options
  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

library oracle-onchain
  import:           common, plutus-ghc-options
  hs-source-dirs:   onchain
  exposed-modules:
    Oracle.OnChain.Oracle
    Oracle.OnChain.Oracle.Compiled
  build-depends:
    , base
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , bytestring
    , cardano-api

library oracle-offchain
  import:           common
  hs-source-dirs:   offchain
  exposed-modules:
    Oracle.Api
    Oracle.Script
  build-depends:
    , base
    , atlas-cardano
    , containers
    , oracle:oracle-onchain

executable oracle
  import:           common
  hs-source-dirs:   app
  main-is:          oracle.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , base
    , atlas-cardano
    , text
    , oracle:oracle-offchain

executable oracle-update
  import:           common
  hs-source-dirs:   app
  main-is:          oracle-update.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , base
    , atlas-cardano
    , text
    , oracle:oracle-offchain