cabal-version:      3.6
name:               oracle
version:            0.1.0

common common
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:        -Wall -Wincomplete-uni-patterns -Wunused-packages

  -- speed-ups GHCi considerably
  ghc-options:        -fno-show-valid-hole-fits

common plutus-ghc-options
  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

library oracle-onchain
  import:           common, plutus-ghc-options
  hs-source-dirs:   onchain
  exposed-modules:
    Oracle.OnChain.Oracle
    Oracle.OnChain.Oracle.Compiled
  build-depends:
    , base
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , bytestring
    , cardano-api

library oracle-offchain
  import:           common
  hs-source-dirs:   offchain
  exposed-modules:
    Oracle.Api
    Oracle.Script
  build-depends:
    , base
    , atlas-cardano
    , containers
    , oracle:oracle-onchain

executable oracle
  import:           common
  hs-source-dirs:   app
  main-is:          oracle.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , base
    , atlas-cardano
    , text
    , oracle:oracle-offchain

executable oracle-update
  import:           common
  hs-source-dirs:   app
  main-is:          oracle-update.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , base
    , atlas-cardano
    , text
    , oracle:oracle-offchain

executable oracle-delete
  import:           common
  hs-source-dirs:   app
  main-is:          oracle-delete.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , base
    , atlas-cardano
    , text
    , oracle:oracle-offchain

library oracle-server-lib
  import:           common
  hs-source-dirs:   server-lib
  exposed-modules:
    Oracle.Api.Api
    Oracle.Api.Context
    Oracle.Api.Oracle
  build-depends:
    , base
    , aeson
    , oracle:oracle-onchain
    , oracle:oracle-offchain
    , atlas-cardano
    , swagger2
    , servant-server
    , servant-swagger
    , containers
    , text

executable oracle-server
  import:           common
  hs-source-dirs:   server
  main-is:          server-main.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , aeson-pretty
    , base
    , bytestring
    , atlas-cardano
    , oracle:oracle-server-lib
    , servant-server
    , transformers
    , wai
    , wai-cors
    , http-types
    , warp


